Update maint. message
@ Sybren

--- a/src/maintenance.html
+++ b/src/maintenance.html
@@ -1,3 +1,4 @@
 <div class="text-center">
-    Onderhoud
+    Deze pagina is momenteel in onderhoud. <br />
+    Vernieuw de pagina (F5), of probeer het later opnieuw.
 </div>
